[project]
name = "socnet-entitys"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "shapranov dmitrii", email = "shapranov.work@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
